split monolithic script into modules

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn with Fun - For Toddlers</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-259LZVMWRJ"></script>
@@ -792,6 +792,11 @@
     <!-- Celebration overlay -->
     <div class="celebration-overlay" id="celebrationOverlay"></div>
 
-    <script src="script.js"></script>
+    <script src="js/modules/globals.js"></script>
+    <script src="js/modules/data.js"></script>
+    <script src="js/modules/achievements.js"></script>
+    <script src="js/modules/gestures.js"></script>
+    <script src="js/modules/animations.js"></script>
+    <script src="js/modules/app.js"></script>
 </body>
 </html>
